--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.3.3 <4.0.0"
 
 dependencies:
+  dart_code_viewer_x: ^1.0.1
   dart_style: ^2.3.2
   flutter:
     sdk: flutter
